--- a/style.css
+++ b/style.css
@@ -8,3 +8,25 @@ header {
     width: 100%;
     height: 500px;
 }
+main .selected-part {
+    width: 260px;
+    height: 390px;
+    background-color: #000000;
+    margin-left: 70px;
+}
+main .selected-part>ul>li {
+    margin-top: 16px;
+}
+main .calculation-part {
+    width: 260px;
+    height: 480px;
+    background-color: #000000;
+    margin-left: 70px;
+}
+main .player-img{
+    width: 300px;
+    height: 200px;
+}
+.button-color {
+    background-color: #015196;
+}
